--- a/scss/_ejemplo.scss
+++ b/scss/_ejemplo.scss
@@ -1,3 +1,6 @@
+
+
+
 div{
     background-color: azure;
     color: red;
@@ -13,3 +16,17 @@ div{
         }
     }
 }
+
+$mapa:(
+facebook: blue,
+twitter: red,
+mail: green,
+
+
+);
+
+    
+
+
+
+    
